--- a/student-distrib/Makefile.dep
+++ b/student-distrib/Makefile.dep
@@ -2,9 +2,10 @@ boot.o: boot.S multiboot.h x86_desc.h types.h
 x86_desc.o: x86_desc.S x86_desc.h types.h
 i8259.o: i8259.c i8259.h types.h lib.h
 interrupts.o: interrupts.c x86_desc.h types.h interrupts.h lib.h i8259.h \
-  RTC.h
+  RTC.h keyboard.h
 kernel.o: kernel.c multiboot.h types.h x86_desc.h lib.h i8259.h RTC.h \
-  debug.h tests.h interrupts.h
+  debug.h tests.h interrupts.h keyboard.h
+keyboard.o: keyboard.c keyboard.h types.h i8259.h lib.h
 lib.o: lib.c lib.h types.h
 RTC.o: RTC.c RTC.h lib.h types.h
 tests.o: tests.c tests.h x86_desc.h types.h lib.h
