--- a/student-distrib/Makefile.dep
+++ b/student-distrib/Makefile.dep
@@ -8,5 +8,5 @@ kernel.o: kernel.c multiboot.h types.h x86_desc.h lib.h i8259.h RTC.h \
 keyboard.o: keyboard.c keyboard.h types.h i8259.h lib.h
 lib.o: lib.c lib.h types.h
 paging.o: paging.c paging.h x86_desc.h types.h lib.h
-RTC.o: RTC.c RTC.h lib.h types.h i8259.h
-tests.o: tests.c tests.h x86_desc.h types.h lib.h i8259.h
+RTC.o: RTC.c RTC.h types.h lib.h i8259.h
+tests.o: tests.c tests.h x86_desc.h types.h lib.h i8259.h RTC.h
