backpack, terminal read, fixed new line

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "i8259.h": "c",
         "lib.h": "c",
         "types.h": "c",
-        "ios": "c"
+        "ios": "c",
+        "__locale": "c"
     }
 }
