--- a/student-distrib/Makefile.dep
+++ b/student-distrib/Makefile.dep
@@ -9,4 +9,5 @@ keyboard.o: keyboard.c keyboard.h types.h i8259.h lib.h
 lib.o: lib.c lib.h types.h
 paging.o: paging.c paging.h x86_desc.h types.h lib.h
 RTC.o: RTC.c RTC.h types.h lib.h i8259.h
-tests.o: tests.c tests.h x86_desc.h types.h lib.h i8259.h RTC.h
+tests.o: tests.c tests.h x86_desc.h types.h lib.h i8259.h RTC.h \
+  keyboard.h
