--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "lib.h": "c",
         "types.h": "c",
         "ios": "c",
-        "__locale": "c"
+        "__locale": "c",
+        "ostream": "c"
     }
 }
