--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "types.h": "c",
         "ios": "c",
         "__locale": "c",
-        "ostream": "c"
+        "ostream": "c",
+        "sys_calls.h": "c",
+        "sys_call.h": "c"
     }
 }
