--- a/student-distrib/Makefile.dep
+++ b/student-distrib/Makefile.dep
@@ -1,5 +1,5 @@
 boot.o: boot.S multiboot.h x86_desc.h types.h
-sys_calls.o: sys_calls.S sys_calls.h types.h lib.h
+sys_calls_handler.o: sys_calls_handler.S
 x86_desc.o: x86_desc.S x86_desc.h types.h
 file_sys.o: file_sys.c file_sys.h lib.h types.h
 i8259.o: i8259.c i8259.h types.h lib.h
@@ -11,6 +11,6 @@ keyboard.o: keyboard.c keyboard.h types.h i8259.h lib.h
 lib.o: lib.c lib.h types.h
 paging.o: paging.c paging.h x86_desc.h types.h lib.h
 RTC.o: RTC.c RTC.h types.h lib.h i8259.h
-sys_calls.o: sys_calls.c sys_calls.h types.h lib.h
+sys_calls.o: sys_calls.c sys_calls.h types.h
 tests.o: tests.c tests.h x86_desc.h types.h lib.h i8259.h RTC.h \
   keyboard.h file_sys.h
