--- a/student-distrib/Makefile.dep
+++ b/student-distrib/Makefile.dep
@@ -12,6 +12,6 @@ lib.o: lib.c lib.h types.h
 paging.o: paging.c paging.h x86_desc.h types.h lib.h
 RTC.o: RTC.c RTC.h types.h lib.h i8259.h
 sys_calls.o: sys_calls.c sys_calls.h types.h file_sys.h lib.h paging.h \
-  x86_desc.h
+  x86_desc.h keyboard.h i8259.h
 tests.o: tests.c tests.h x86_desc.h types.h lib.h i8259.h RTC.h \
   keyboard.h file_sys.h
