--- a/student-distrib/Makefile.dep
+++ b/student-distrib/Makefile.dep
@@ -1,12 +1,13 @@
 boot.o: boot.S multiboot.h x86_desc.h types.h
 sys_calls_handler.o: sys_calls_handler.S
 x86_desc.o: x86_desc.S x86_desc.h types.h
+file_descriptors.o: file_descriptors.c
 file_sys.o: file_sys.c file_sys.h lib.h types.h
 i8259.o: i8259.c i8259.h types.h lib.h
 interrupts.o: interrupts.c x86_desc.h types.h interrupts.h lib.h i8259.h \
   RTC.h keyboard.h sys_calls.h file_sys.h paging.h
 kernel.o: kernel.c multiboot.h types.h x86_desc.h lib.h i8259.h RTC.h \
-  debug.h tests.h interrupts.h keyboard.h paging.h file_sys.h
+  debug.h tests.h interrupts.h keyboard.h paging.h file_sys.h sys_calls.h
 keyboard.o: keyboard.c keyboard.h types.h i8259.h lib.h
 lib.o: lib.c lib.h types.h
 paging.o: paging.c paging.h x86_desc.h types.h lib.h
