--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,10 @@
         "algorithm": "c",
         "x86_desc.h": "c",
         "__tuple": "c",
-        "array": "c"
+        "array": "c",
+        "cwchar": "c",
+        "string": "c",
+        "string_view": "c",
+        "utility": "c"
     }
 }
