--- a/student-distrib/Makefile.dep
+++ b/student-distrib/Makefile.dep
@@ -14,7 +14,7 @@ keyboard.o: keyboard.c keyboard.h types.h i8259.h lib.h
 lib.o: lib.c lib.h types.h sys_calls.h file_sys.h paging.h x86_desc.h \
   keyboard.h i8259.h rtc.h
 paging.o: paging.c paging.h x86_desc.h types.h lib.h
-rtc.o: rtc.c rtc.h types.h lib.h i8259.h
+RTC.o: RTC.c rtc.h types.h lib.h i8259.h
 sys_calls.o: sys_calls.c sys_calls.h types.h file_sys.h lib.h paging.h \
   x86_desc.h keyboard.h i8259.h rtc.h
 tests.o: tests.c tests.h x86_desc.h types.h lib.h i8259.h rtc.h \
