--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "cwchar": "c",
         "string": "c",
         "string_view": "c",
-        "utility": "c"
+        "utility": "c",
+        "file_sys.h": "c"
     }
 }
