mostly debugged terminal switching

--- a/student-distrib/Makefile.dep
+++ b/student-distrib/Makefile.dep
@@ -13,6 +13,7 @@ keyboard.o: keyboard.c keyboard.h types.h i8259.h lib.h sys_calls.h \
 lib.o: lib.c lib.h types.h sys_calls.h file_sys.h paging.h x86_desc.h \
   keyboard.h i8259.h RTC.h
 paging.o: paging.c paging.h x86_desc.h types.h lib.h
+pit.o: pit.c
 RTC.o: RTC.c RTC.h types.h lib.h i8259.h
 sys_calls.o: sys_calls.c sys_calls.h types.h file_sys.h lib.h paging.h \
   x86_desc.h keyboard.h i8259.h RTC.h
