--- a/student-distrib/Makefile.dep
+++ b/student-distrib/Makefile.dep
@@ -10,7 +10,7 @@ kernel.o: kernel.c multiboot.h types.h x86_desc.h lib.h i8259.h RTC.h \
   debug.h tests.h interrupts.h keyboard.h paging.h file_sys.h sys_calls.h \
   pit.h
 keyboard.o: keyboard.c keyboard.h types.h i8259.h lib.h sys_calls.h \
-  file_sys.h paging.h x86_desc.h RTC.h
+  file_sys.h paging.h x86_desc.h RTC.h pit.h
 lib.o: lib.c lib.h types.h sys_calls.h file_sys.h paging.h x86_desc.h \
   keyboard.h i8259.h RTC.h pit.h
 paging.o: paging.c paging.h x86_desc.h types.h lib.h
@@ -18,6 +18,6 @@ pit.o: pit.c pit.h types.h lib.h i8259.h sys_calls.h file_sys.h paging.h \
   x86_desc.h keyboard.h RTC.h
 RTC.o: RTC.c RTC.h types.h lib.h i8259.h
 sys_calls.o: sys_calls.c sys_calls.h types.h file_sys.h lib.h paging.h \
-  x86_desc.h keyboard.h i8259.h RTC.h
+  x86_desc.h keyboard.h i8259.h RTC.h pit.h
 tests.o: tests.c tests.h x86_desc.h types.h lib.h i8259.h RTC.h \
   keyboard.h file_sys.h sys_calls.h paging.h
