--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "string": "c",
         "string_view": "c",
         "utility": "c",
-        "file_sys.h": "c"
+        "file_sys.h": "c",
+        "ratio": "c"
     }
 }
